--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-111111
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh-tw">
+	<head>
+		<title>卖猪仔</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<script type="text/javascript" src="internal-code-conveter.js"></script>
+	</head>
+	<body>
+		<form action="">
+			<table>
+				<tr>
+					<td>原文</td>
+					<td></td>
+					<td>內碼</td>
+				</tr>
+				<tr>
+					<td><textarea id="character" cols="34" rows="16"></textarea></td>
+					<td><input type="button" value="&lt;&lt;" onclick="convertToCharacter()" /><input type="button" value="&gt;&gt;" onclick="convertToInternalCode()" /></td>
+					<td><textarea id="code" cols="34" rows="16"></textarea></td>
+				</tr>
+			</table>
+			<p>進位：
+				<input type="radio" name="base" id="binary"  /><label for="binary">2 進位</label>
+				<input type="radio" name="base" id="hexadecimal"checked="checked" /><label for="hexadecimal">16 進位</label>
+			</p>
+			<p>編碼：
+				<input type="radio" name="encoding" id="big5" checked="checked" /><label for="big5">Big5</label>
+				<input type="radio" name="encoding" id="unicode" /><label for="unicode">Unicode</label>
+			</p>
+		</form>
+	</body>
+</html>
