--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh-tw">
 	<head>
-		<title>卖猪仔-只支援繁体字符串</title>
+		<title>卖猪仔</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<script type="text/javascript" src="internal-code-conveter.js"></script>
 	</head>
@@ -9,7 +9,7 @@
 		<form action="">
 			<table>
 				<tr>
-					<td>原文</td>
+					<td>只支援繁体字符串</td>
 					<td></td>
 					<td>內碼</td>
 				</tr>
